--- a/about.html
+++ b/about.html
@@ -271,8 +271,22 @@
         <!-- Page Header -->
     <section class="page-header" aria-labelledby="page-title">
         <div class="container">
-            <h1 id="page-title">About Us</h1>
-            <p>Leading the industry in motion control solutions</p>
+            <div class="hero-highlights" style="justify-content: center; margin-bottom: 1rem;">
+                <span class="highlight-badge">
+                    <i class="fas fa-calendar-alt" style="color: #c41e3a; margin-right: 0.5rem;"></i>
+                    Since 1992 • 32+ Years
+                </span>
+                <span class="highlight-badge">
+                    <i class="fas fa-certificate" style="color: #c41e3a; margin-right: 0.5rem;"></i>
+                    ISO 9001:2015 Certified
+                </span>
+                <span class="highlight-badge">
+                    <i class="fas fa-globe" style="color: #c41e3a; margin-right: 0.5rem;"></i>
+                    India • UAE • Qatar
+                </span>
+            </div>
+            <h1 id="page-title">About Susin Group</h1>
+            <p>Three decades of engineering excellence in industrial valve automation. ISO 9001:2015 certified quality. Global presence serving 100+ countries.</p>
 
             <nav aria-label="Breadcrumb">
                 <ol class="breadcrumb">
@@ -325,25 +339,46 @@
             </div>
 
             <div class="about-section">
-                <h2 id="certifications-heading">Certifications & Standards</h2>
-                <p>We maintain the highest standards of quality and compliance:</p>
+                <h2 id="certifications-heading">Certifications & International Standards</h2>
+                <p>We maintain the highest standards of quality and compliance with internationally recognized certifications:</p>
                 <div class="certifications">
                     <div class="cert-item">
-                        <i class="fas fa-certificate"></i>
-                        <span>ISO 9001:2015 Certified</span>
+                        <i class="fas fa-certificate" style="color: #c41e3a;"></i>
+                        <span>ISO 9001:2015 Quality Management</span>
                     </div>
                     <div class="cert-item">
-                        <i class="fas fa-certificate"></i>
-                        <span>CE Marking</span>
+                        <i class="fas fa-certificate" style="color: #FF6B6B;"></i>
+                        <span>ATEX Zone 1 & 2 Explosion-Proof</span>
                     </div>
                     <div class="cert-item">
-                        <i class="fas fa-certificate"></i>
-                        <span>ATEX Certified</span>
+                        <i class="fas fa-certificate" style="color: #4CAF50;"></i>
+                        <span>SIL 2/3 Safety Integrity Level</span>
                     </div>
                     <div class="cert-item">
-                        <i class="fas fa-certificate"></i>
-                        <span>API Standards</span>
+                        <i class="fas fa-certificate" style="color: #2196F3;"></i>
+                        <span>ISO 5211 Mounting Standard</span>
                     </div>
+                    <div class="cert-item">
+                        <i class="fas fa-certificate" style="color: #FF9800;"></i>
+                        <span>API 6D & API 609 Compliance</span>
+                    </div>
+                    <div class="cert-item">
+                        <i class="fas fa-certificate" style="color: #9C27B0;"></i>
+                        <span>IP67/IP68 Protection Rating</span>
+                    </div>
+                    <div class="cert-item">
+                        <i class="fas fa-certificate" style="color: #00BCD4;"></i>
+                        <span>CE Marking (PED Directive)</span>
+                    </div>
+                    <div class="cert-item">
+                        <i class="fas fa-certificate" style="color: #795548;"></i>
+                        <span>NACE MR0175 Corrosion Resistance</span>
+                    </div>
+                </div>
+                <div class="product-specs" style="margin-top: 2rem; max-width: 800px;">
+                    <div class="spec-item"><i class="fas fa-check-circle" style="color: #4CAF50; width: 20px;"></i> Factory Acceptance Testing (FAT) facilities</div>
+                    <div class="spec-item"><i class="fas fa-check-circle" style="color: #4CAF50; width: 20px;"></i> Traceability & documentation per ISO standards</div>
+                    <div class="spec-item"><i class="fas fa-check-circle" style="color: #4CAF50; width: 20px;"></i> Third-party inspection & certification support</div>
                 </div>
             </div>
 
