--- a/industries.html
+++ b/industries.html
@@ -260,8 +260,22 @@
         <!-- Page Header -->
     <section class="page-header" aria-labelledby="page-title">
         <div class="container">
-            <h1 id="page-title">Industries We Serve</h1>
-            <p>Providing reliable motion control solutions across diverse industrial sectors</p>
+            <div class="hero-highlights" style="justify-content: center; margin-bottom: 1rem;">
+                <span class="highlight-badge">
+                    <i class="fas fa-globe" style="color: #c41e3a; margin-right: 0.5rem;"></i>
+                    500+ Global Projects
+                </span>
+                <span class="highlight-badge">
+                    <i class="fas fa-industry" style="color: #c41e3a; margin-right: 0.5rem;"></i>
+                    32+ Years Experience
+                </span>
+                <span class="highlight-badge">
+                    <i class="fas fa-certificate" style="color: #c41e3a; margin-right: 0.5rem;"></i>
+                    BHEL • NTPC Approved
+                </span>
+            </div>
+            <h1 id="page-title">Global Industry Solutions</h1>
+            <p>Delivering mission-critical valve automation across 8 major industrial sectors. Proven performance in 100+ countries worldwide.</p>
 
             <nav aria-label="Breadcrumb">
                 <ol class="breadcrumb">
@@ -279,14 +293,23 @@
             <div class="industry-card">
                 <div class="industry-image">
                     <img src="https://images.unsplash.com/photo-1558618666-fcd25c85cd64?w=800&q=80" alt="Oil and Gas Industry" loading="lazy">
+                    <div class="industry-overlay">
+                        <div class="industry-stat">10,000+ Installations</div>
+                    </div>
                 </div>
                 <h2>Oil & Gas</h2>
                 <p>SUSIN is a leading provider of Valve Automation Applications across the upstream, midstream, and downstream sectors in the Asian market. Our exceptional track record is highlighted by approvals from major refineries, showcasing our commitment to quality and reliability. We have over 100 actuators in successful operation within FPSO projects, solidifying our expertise and trustworthiness in critical oil & gas industry applications.</p>
+                <ul class="industry-highlights">
+                    <li><i class="fas fa-check" style="color: #4CAF50;"></i> ATEX Zone 1 & 2 Certified for explosive atmospheres</li>
+                    <li><i class="fas fa-check" style="color: #4CAF50;"></i> SIL 2/3 Safety Systems for ESD applications</li>
+                    <li><i class="fas fa-check" style="color: #4CAF50;"></i> API 6D & API 609 compliant</li>
+                    <li><i class="fas fa-check" style="color: #4CAF50;"></i> -40°C to +80°C extreme temperature rating</li>
+                </ul>
                 <h3>Key Applications:</h3>
                 <ul>
-                    <li>Pipeline valve control</li>
-                    <li>Refinery process control</li>
-                    <li>Wellhead automation</li>
+                    <li>ESD systems and pipeline isolation</li>
+                    <li>Refinery process control and wellhead automation</li>
+                    <li>Offshore platforms and FPSO units</li>
                     <li>Emergency shutdown systems</li>
                 </ul>
                 <a href="contact.html" class="btn btn-primary">Get Solution</a>
@@ -295,15 +318,24 @@
             <div class="industry-card">
                 <div class="industry-image">
                     <img src="https://images.unsplash.com/photo-1581093458791-9d42e2c05a8f?w=800&q=80" alt="Water Treatment Plant" loading="lazy">
+                    <div class="industry-overlay">
+                        <div class="industry-stat">5,000+ Units Deployed</div>
+                    </div>
                 </div>
-                <h2>Water Treatment</h2>
-                <p>Reliable actuators for water and wastewater treatment facilities, ensuring precise control of valves and gates in critical water management processes. Our solutions meet stringent water quality and environmental standards.</p>
+                <h2>Water & Wastewater Treatment</h2>
+                <p>Reliable actuators for water and wastewater treatment facilities, ensuring precise control of valves and gates in critical water management processes. Our solutions meet stringent water quality and environmental standards including NSF-61 for drinking water safety.</p>
+                <ul class="industry-highlights">
+                    <li><i class="fas fa-check" style="color: #4CAF50;"></i> IP67/68 Submersible rated for wet environments</li>
+                    <li><i class="fas fa-check" style="color: #4CAF50;"></i> NSF-61 Drinking Water Safe certification</li>
+                    <li><i class="fas fa-check" style="color: #4CAF50;"></i> Corrosion-resistant coatings (316 SS, epoxy)</li>
+                    <li><i class="fas fa-check" style="color: #4CAF50;"></i> SCADA/PLC integration ready</li>
+                </ul>
                 <h3>Key Applications:</h3>
                 <ul>
-                    <li>Water distribution networks</li>
-                    <li>Wastewater treatment plants</li>
-                    <li>Pumping stations</li>
-                    <li>Reservoir control</li>
+                    <li>Municipal water distribution networks</li>
+                    <li>Wastewater treatment plants and desalination</li>
+                    <li>Pumping stations and reservoir control</li>
+                    <li>CIP/SIP systems for process water</li>
                 </ul>
                 <a href="contact.html" class="btn btn-primary">Get Solution</a>
             </div>
@@ -311,15 +343,24 @@
             <div class="industry-card">
                 <div class="industry-image">
                     <img src="https://images.unsplash.com/photo-1473341304170-971dccb5ac1e?w=800&q=80" alt="Power Generation Plant" loading="lazy">
+                    <div class="industry-overlay">
+                        <div class="industry-stat">NTPC & BHEL Approved</div>
+                    </div>
                 </div>
                 <h2>Power Generation</h2>
                 <p>SUSIN has proudly provided steadfast support to the power industry for over 15 years, earning approvals from esteemed organizations such as BHEL, NTPC, and Kahramaa in Qatar. Currently supporting 100+ power industries across Asia, we deliver reliable valve automation solutions for thermal, nuclear, and renewable energy facilities where operational excellence is critical.</p>
+                <ul class="industry-highlights">
+                    <li><i class="fas fa-check" style="color: #4CAF50;"></i> High-temperature rated up to +200°C</li>
+                    <li><i class="fas fa-check" style="color: #4CAF50;"></i> Seismic qualified for nuclear applications</li>
+                    <li><i class="fas fa-check" style="color: #4CAF50;"></i> SIL 3 safety-critical system approvals</li>
+                    <li><i class="fas fa-check" style="color: #4CAF50;"></i> Rapid response for fast-acting isolation</li>
+                </ul>
                 <h3>Key Applications:</h3>
                 <ul>
-                    <li>Steam turbine control</li>
-                    <li>Boiler feedwater systems</li>
-                    <li>Cooling water systems</li>
-                    <li>Nuclear safety systems</li>
+                    <li>Steam turbine control and boiler feedwater</li>
+                    <li>Cooling water systems and condensate extraction</li>
+                    <li>Nuclear safety systems (ASME N-stamp)</li>
+                    <li>Renewable energy (CSP, biomass, geothermal)</li>
                 </ul>
                 <a href="contact.html" class="btn btn-primary">Get Solution</a>
             </div>
@@ -327,15 +368,24 @@
             <div class="industry-card">
                 <div class="industry-image">
                     <img src="https://images.unsplash.com/photo-1532187863486-abf9dbad1b69?w=800&q=80" alt="Chemical Processing Plant" loading="lazy">
+                    <div class="industry-overlay">
+                        <div class="industry-stat">Harsh Environment Rated</div>
+                    </div>
                 </div>
-                <h2>Chemical Processing</h2>
-                <p>Corrosion-resistant actuators designed for harsh chemical environments. Our products handle aggressive chemicals, high temperatures, and demanding process conditions while maintaining reliability and precision.</p>
+                <h2>Chemical & Petrochemical</h2>
+                <p>Corrosion-resistant actuators designed for harsh chemical environments. Our products handle aggressive chemicals, high temperatures, and demanding process conditions while maintaining reliability and precision with specialized materials and coatings.</p>
+                <ul class="industry-highlights">
+                    <li><i class="fas fa-check" style="color: #4CAF50;"></i> 316 SS & Exotic Alloys (Hastelloy, Inconel)</li>
+                    <li><i class="fas fa-check" style="color: #4CAF50;"></i> NACE MR0175 compliant for H₂S service</li>
+                    <li><i class="fas fa-check" style="color: #4CAF50;"></i> ATEX Zone 1 & 2 for explosive atmospheres</li>
+                    <li><i class="fas fa-check" style="color: #4CAF50;"></i> Anti-corrosion coatings (Epoxy, PTFE)</li>
+                </ul>
                 <h3>Key Applications:</h3>
                 <ul>
-                    <li>Chemical reactor control</li>
-                    <li>Process piping systems</li>
-                    <li>Batch processing</li>
-                    <li>Safety systems</li>
+                    <li>Chemical reactor control and batch processing</li>
+                    <li>Process piping systems and tank farms</li>
+                    <li>Acid/caustic handling and toxic gas isolation</li>
+                    <li>Safety shutdown systems</li>
                 </ul>
                 <a href="contact.html" class="btn btn-primary">Get Solution</a>
             </div>
@@ -343,15 +393,24 @@
             <div class="industry-card">
                 <div class="industry-image">
                     <img src="https://images.unsplash.com/photo-1544551763-46a013bb70d5?w=800&q=80" alt="Marine and Offshore Platform" loading="lazy">
+                    <div class="industry-overlay">
+                        <div class="industry-stat">100+ FPSO Units</div>
+                    </div>
                 </div>
                 <h2>Marine & Offshore</h2>
-                <p>Rugged solutions engineered for marine and offshore applications, designed to withstand saltwater exposure, extreme weather conditions, and the demanding requirements of maritime operations.</p>
+                <p>Rugged solutions engineered for marine and offshore applications, designed to withstand saltwater exposure, extreme weather conditions, and the demanding requirements of maritime operations including FPSO, drilling platforms, and shipboard systems.</p>
+                <ul class="industry-highlights">
+                    <li><i class="fas fa-check" style="color: #4CAF50;"></i> DNV-GL Marine Certified</li>
+                    <li><i class="fas fa-check" style="color: #4CAF50;"></i> Salt spray tested (ASTM B117 - 5000+ hours)</li>
+                    <li><i class="fas fa-check" style="color: #4CAF50;"></i> IP67/68 waterproof & submersible</li>
+                    <li><i class="fas fa-check" style="color: #4CAF50;"></i> Shock & vibration resistant (MIL-STD-810)</li>
+                </ul>
                 <h3>Key Applications:</h3>
                 <ul>
-                    <li>Shipboard systems</li>
-                    <li>Offshore platforms</li>
-                    <li>Ballast systems</li>
-                    <li>Marine engine control</li>
+                    <li>Shipboard systems and offshore platforms</li>
+                    <li>FPSO, FLNG, and drilling rigs</li>
+                    <li>Ballast water management and cargo handling</li>
+                    <li>Marine engine control and fire suppression</li>
                 </ul>
                 <a href="contact.html" class="btn btn-primary">Get Solution</a>
             </div>
@@ -359,15 +418,24 @@
             <div class="industry-card">
                 <div class="industry-image">
                     <img src="https://images.unsplash.com/photo-1587854692152-cbe660dbde88?w=800&q=80" alt="Pharmaceutical Manufacturing" loading="lazy">
+                    <div class="industry-overlay">
+                        <div class="industry-stat">FDA Compliant</div>
+                    </div>
                 </div>
-                <h2>Pharmaceutical</h2>
-                <p>Precision actuators meeting strict hygiene and quality standards required in pharmaceutical manufacturing. Our solutions ensure clean, precise control in sterile environments.</p>
+                <h2>Pharmaceutical & Biotech</h2>
+                <p>Precision actuators meeting strict hygiene and quality standards required in pharmaceutical manufacturing. Our solutions ensure clean, precise control in sterile environments with full validation documentation and compliance to FDA, cGMP, and 3-A standards.</p>
+                <ul class="industry-highlights">
+                    <li><i class="fas fa-check" style="color: #4CAF50;"></i> 3-A Sanitary Standards certified</li>
+                    <li><i class="fas fa-check" style="color: #4CAF50;"></i> CIP/SIP compatible (clean-in-place/steam-in-place)</li>
+                    <li><i class="fas fa-check" style="color: #4CAF50;"></i> FDA 21 CFR Part 11 compliant controls</li>
+                    <li><i class="fas fa-check" style="color: #4CAF50;"></i> Electropolished stainless steel (Ra <0.4μm)</li>
+                </ul>
                 <h3>Key Applications:</h3>
                 <ul>
-                    <li>Clean room systems</li>
-                    <li>Process control</li>
-                    <li>Sterilization systems</li>
-                    <li>Quality control systems</li>
+                    <li>Aseptic processing and clean room systems</li>
+                    <li>API manufacturing and sterile filling</li>
+                    <li>Bioreactor control and purified water systems</li>
+                    <li>Quality control and validation systems</li>
                 </ul>
                 <a href="contact.html" class="btn btn-primary">Get Solution</a>
             </div>
@@ -375,13 +443,22 @@
             <div class="industry-card">
                 <div class="industry-icon"><i class="fas fa-fire"></i></div>
                 <h2>Mining & Minerals</h2>
-                <p>Heavy-duty actuators built to handle the extreme conditions of mining operations, including dust, vibration, and heavy loads.</p>
+                <div class="industry-overlay" style="position: relative; padding: 0.75rem; background: linear-gradient(135deg, rgba(26,41,66,0.9) 0%, rgba(44,90,160,0.8) 100%); border-radius: 8px; margin-bottom: 1rem;">
+                    <div class="industry-stat" style="color: white; font-weight: 700; text-transform: uppercase; letter-spacing: 0.5px; margin: 0;">Heavy-Duty Industrial</div>
+                </div>
+                <p>Heavy-duty actuators built to handle the extreme conditions of mining operations, including dust, vibration, and heavy loads. Engineered for continuous operation in abrasive environments with enhanced sealing and rugged construction.</p>
+                <ul class="industry-highlights">
+                    <li><i class="fas fa-check" style="color: #4CAF50;"></i> IP67 dust & water ingress protection</li>
+                    <li><i class="fas fa-check" style="color: #4CAF50;"></i> Shock & vibration resistant design</li>
+                    <li><i class="fas fa-check" style="color: #4CAF50;"></i> Extreme temperature range (-40°C to +80°C)</li>
+                    <li><i class="fas fa-check" style="color: #4CAF50;"></i> Heavy-duty bearings & seals</li>
+                </ul>
                 <h3>Key Applications:</h3>
                 <ul>
-                    <li>Ore processing</li>
-                    <li>Material handling</li>
-                    <li>Dust suppression systems</li>
-                    <li>Conveyor control</li>
+                    <li>Ore processing and material slurry control</li>
+                    <li>Material handling and conveyor systems</li>
+                    <li>Dust suppression and water management</li>
+                    <li>Tailings management and process isolation</li>
                 </ul>
                 <a href="contact.html" class="btn btn-primary">Get Solution</a>
             </div>
@@ -389,13 +466,22 @@
             <div class="industry-card">
                 <div class="industry-icon"><i class="fas fa-utensils"></i></div>
                 <h2>Food & Beverage</h2>
-                <p>Hygienic actuators designed for food and beverage processing, meeting FDA and food safety standards with easy-clean designs.</p>
+                <div class="industry-overlay" style="position: relative; padding: 0.75rem; background: linear-gradient(135deg, rgba(26,41,66,0.9) 0%, rgba(44,90,160,0.8) 100%); border-radius: 8px; margin-bottom: 1rem;">
+                    <div class="industry-stat" style="color: white; font-weight: 700; text-transform: uppercase; letter-spacing: 0.5px; margin: 0;">Hygienic Design</div>
+                </div>
+                <p>Hygienic actuators designed for food and beverage processing, meeting FDA and food safety standards with easy-clean designs. Sanitary construction ensures compliance with HACCP, 3-A, and EHEDG guidelines for contamination-free operation.</p>
+                <ul class="industry-highlights">
+                    <li><i class="fas fa-check" style="color: #4CAF50;"></i> FDA CFR 21 & NSF certified materials</li>
+                    <li><i class="fas fa-check" style="color: #4CAF50;"></i> 3-A & EHEDG sanitary standards</li>
+                    <li><i class="fas fa-check" style="color: #4CAF50;"></i> CIP/SIP washdown capability (IP69K)</li>
+                    <li><i class="fas fa-check" style="color: #4CAF50;"></i> Smooth surfaces (no crevices for bacteria)</li>
+                </ul>
                 <h3>Key Applications:</h3>
                 <ul>
-                    <li>Process control</li>
-                    <li>Packaging lines</li>
-                    <li>Sanitary systems</li>
-                    <li>Quality assurance</li>
+                    <li>Dairy, brewing & beverage processing</li>
+                    <li>Packaging lines and filling systems</li>
+                    <li>Sanitary process control & CIP systems</li>
+                    <li>Aseptic processing and quality assurance</li>
                 </ul>
                 <a href="contact.html" class="btn btn-primary">Get Solution</a>
             </div>
