--- a/products-actuators-gearboxes.html
+++ b/products-actuators-gearboxes.html
@@ -380,8 +380,22 @@
     <!-- Page Header -->
     <section class="page-header" aria-labelledby="page-title">
         <div class="container">
-            <h1 id="page-title">Our Products</h1>
-            <p>Comprehensive range of industrial actuators and gearboxes for critical applications</p>
+            <div class="hero-highlights" style="justify-content: center; margin-bottom: 1rem;">
+                <span class="highlight-badge">
+                    <i class="fas fa-certificate" style="color: #c41e3a; margin-right: 0.5rem;"></i>
+                    ISO 9001:2015 & API Certified
+                </span>
+                <span class="highlight-badge">
+                    <i class="fas fa-shield-alt" style="color: #c41e3a; margin-right: 0.5rem;"></i>
+                    ATEX Zone 1 & 2 • SIL 2/3
+                </span>
+                <span class="highlight-badge">
+                    <i class="fas fa-globe" style="color: #c41e3a; margin-right: 0.5rem;"></i>
+                    ISO 5211 Compliant
+                </span>
+            </div>
+            <h1 id="page-title">Industrial Actuator & Motion Control Products</h1>
+            <p>Engineered to global standards. Certified for mission-critical applications. Proven in 100+ countries worldwide.</p>
 
             <nav aria-label="Breadcrumb">
                 <ol class="breadcrumb">
@@ -397,7 +411,21 @@
         <div class="container">
             <div class="section-header" style="text-align: center; margin-bottom: 3rem;">
                 <h2 style="font-size: 2.5rem; color: #1a2942; margin-bottom: 1rem;">Pneumatic Actuators</h2>
-                <p style="font-size: 1.1rem; color: #666; max-width: 900px; margin: 0 auto;">We specialize in providing the best & reliable flow control solutions in the most challenging environments. Our pneumatic actuators are engineered to provide reliable, high-torque valve automation solutions for industrial processes.</p>
+                <p style="font-size: 1.1rem; color: #666; max-width: 900px; margin: 0 auto;">World-class Scotch Yoke technology delivering exceptional torque performance. ATEX Zone 1 & 2 certified, SIL 2/3 safety-rated, and ISO 5211 compliant. Proven in 10,000+ installations across oil & gas, power generation, and chemical processing industries worldwide.</p>
+                <div class="hero-highlights" style="justify-content: center; margin-top: 1.5rem;">
+                    <span class="highlight-badge">
+                        <i class="fas fa-fire" style="color: #c41e3a; margin-right: 0.5rem;"></i>
+                        10,000+ Installations
+                    </span>
+                    <span class="highlight-badge">
+                        <i class="fas fa-award" style="color: #c41e3a; margin-right: 0.5rem;"></i>
+                        ATEX & SIL3 Certified
+                    </span>
+                    <span class="highlight-badge">
+                        <i class="fas fa-cog" style="color: #c41e3a; margin-right: 0.5rem;"></i>
+                        Torque: 10 Nm - 120,867 Nm
+                    </span>
+                </div>
             </div>
         </div>
     </section>
