--- a/services.html
+++ b/services.html
@@ -264,8 +264,22 @@
         <!-- Page Header -->
     <section class="page-header" aria-labelledby="page-title">
         <div class="container">
-            <h1 id="page-title">Our Services</h1>
-            <p>Comprehensive support throughout the entire product lifecycle</p>
+            <div class="hero-highlights" style="justify-content: center; margin-bottom: 1rem;">
+                <span class="highlight-badge">
+                    <i class="fas fa-certificate" style="color: #c41e3a; margin-right: 0.5rem;"></i>
+                    ISO 9001:2015 Quality
+                </span>
+                <span class="highlight-badge">
+                    <i class="fas fa-clock" style="color: #c41e3a; margin-right: 0.5rem;"></i>
+                    24/7 Global Support
+                </span>
+                <span class="highlight-badge">
+                    <i class="fas fa-users-cog" style="color: #c41e3a; margin-right: 0.5rem;"></i>
+                    Certified Technicians
+                </span>
+            </div>
+            <h1 id="page-title">Professional Actuator Services & Support</h1>
+            <p>Global service network. Expert installation, maintenance & commissioning. ISO 9001 certified quality assurance. Minimizing downtime worldwide.</p>
 
             <nav aria-label="Breadcrumb">
                 <ol class="breadcrumb">
@@ -283,36 +297,54 @@
             <div class="service-card">
                 <div class="service-icon"><i class="fas fa-wrench"></i></div>
                 <h2>Installation & Commissioning</h2>
-                <p>Our expert technicians provide professional installation and commissioning services to ensure your actuators and gearboxes are properly integrated into your systems. We handle everything from site preparation to final testing and validation.</p>
+                <div class="product-specs" style="margin: 1rem 0;">
+                    <div class="spec-item"><i class="fas fa-certificate" style="color: #c41e3a; width: 20px;"></i> ISO 9001 Certified Field Services</div>
+                    <div class="spec-item"><i class="fas fa-globe" style="color: #c41e3a; width: 20px;"></i> 100+ Countries Worldwide Coverage</div>
+                    <div class="spec-item"><i class="fas fa-user-check" style="color: #c41e3a; width: 20px;"></i> Factory-Trained Technicians</div>
+                </div>
+                <p>Our expert technicians provide professional installation and commissioning services to ensure your actuators and gearboxes are properly integrated into your systems. We handle everything from site preparation to final testing and validation according to international standards (API, ISO, ATEX).</p>
                 <ul>
                     <li>On-site installation by certified technicians</li>
-                    <li>System integration and wiring</li>
-                    <li>Commissioning and performance testing</li>
-                    <li>Documentation and handover</li>
+                    <li>System integration and wiring per IEC standards</li>
+                    <li>Commissioning and performance testing (FAT/SAT)</li>
+                    <li>Documentation and handover with O&M manuals</li>
+                    <li>ATEX/IECEx compliance verification for hazardous areas</li>
                 </ul>
             </div>
 
             <div class="service-card">
                 <div class="service-icon"><i class="fas fa-tools"></i></div>
                 <h2>Maintenance & Support</h2>
-                <p>Comprehensive after-sales support including preventive maintenance, repairs, and troubleshooting. Our service team ensures maximum uptime and optimal performance of your equipment.</p>
+                <div class="product-specs" style="margin: 1rem 0;">
+                    <div class="spec-item"><i class="fas fa-clock" style="color: #c41e3a; width: 20px;"></i> 24/7 Emergency Response</div>
+                    <div class="spec-item"><i class="fas fa-headset" style="color: #c41e3a; width: 20px;"></i> <4 Hour Response SLA</div>
+                    <div class="spec-item"><i class="fas fa-box" style="color: #c41e3a; width: 20px;"></i> Genuine OEM Spare Parts</div>
+                </div>
+                <p>Comprehensive after-sales support including preventive maintenance, repairs, and troubleshooting. Our service team ensures maximum uptime and optimal performance of your equipment with predictive maintenance programs and rapid response.</p>
                 <ul>
-                    <li>Preventive maintenance programs</li>
-                    <li>Emergency repair services</li>
-                    <li>Remote diagnostics and support</li>
-                    <li>24/7 technical assistance</li>
+                    <li>Preventive maintenance programs (PM schedules)</li>
+                    <li>Emergency repair services (24/7 availability)</li>
+                    <li>Remote diagnostics and support (Condition monitoring)</li>
+                    <li>Technical assistance with <4 hour response time</li>
+                    <li>Annual maintenance contracts (AMC) available</li>
                 </ul>
             </div>
 
             <div class="service-card">
                 <div class="service-icon"><i class="fas fa-graduation-cap"></i></div>
                 <h2>Training Programs</h2>
-                <p>Comprehensive training programs for your team covering operation, maintenance, and troubleshooting of our products. Available on-site or at our facilities.</p>
+                <div class="product-specs" style="margin: 1rem 0;">
+                    <div class="spec-item"><i class="fas fa-award" style="color: #c41e3a; width: 20px;"></i> Industry-Recognized Certification</div>
+                    <div class="spec-item"><i class="fas fa-chalkboard-teacher" style="color: #c41e3a; width: 20px;"></i> Hands-On Practical Training</div>
+                    <div class="spec-item"><i class="fas fa-book" style="color: #c41e3a; width: 20px;"></i> Comprehensive Training Materials</div>
+                </div>
+                <p>Comprehensive training programs for your team covering operation, maintenance, and troubleshooting of our products. Available on-site or at our facilities with certification upon completion.</p>
                 <ul>
-                    <li>Operator training</li>
-                    <li>Maintenance technician training</li>
-                    <li>Engineering workshops</li>
-                    <li>Customized training programs</li>
+                    <li>Operator training (Safety & operation procedures)</li>
+                    <li>Maintenance technician training (Certification programs)</li>
+                    <li>Engineering workshops (Design & selection)</li>
+                    <li>Customized training programs (Application-specific)</li>
+                    <li>ATEX/SIL awareness training for hazardous areas</li>
                 </ul>
             </div>
 
