--- a/products.html
+++ b/products.html
@@ -379,8 +379,22 @@
         <!-- Page Header -->
     <section class="page-header">
         <div class="container">
-            <h1>Our Products</h1>
-            <p>Comprehensive range of industrial actuators and gearboxes for critical applications</p>
+            <div class="hero-highlights" style="justify-content: center; margin-bottom: 1rem;">
+                <span class="highlight-badge">
+                    <i class="fas fa-certificate" style="color: #c41e3a; margin-right: 0.5rem;"></i>
+                    ISO 9001:2015 & API Certified
+                </span>
+                <span class="highlight-badge">
+                    <i class="fas fa-shield-alt" style="color: #c41e3a; margin-right: 0.5rem;"></i>
+                    ATEX Zone 1 & 2 • SIL 2/3
+                </span>
+                <span class="highlight-badge">
+                    <i class="fas fa-globe" style="color: #c41e3a; margin-right: 0.5rem;"></i>
+                    ISO 5211 Compliant
+                </span>
+            </div>
+            <h1>Industrial Actuator & Motion Control Products</h1>
+            <p>Engineered to global standards. Certified for mission-critical applications. Proven in 100+ countries worldwide.</p>
 
             <nav aria-label="Breadcrumb">
                 <ol class="breadcrumb">
@@ -396,7 +410,21 @@
         <div class="container">
             <div class="section-header" style="text-align: center; margin-bottom: 3rem;">
                 <h2 style="font-size: 2.5rem; color: #1a2942; margin-bottom: 1rem;">Pneumatic Actuators</h2>
-                <p style="font-size: 1.1rem; color: #666; max-width: 900px; margin: 0 auto;">We specialize in providing the best & reliable flow control solutions in the most challenging environments. Our pneumatic actuators are engineered to provide reliable, high-torque valve automation solutions for industrial processes.</p>
+                <p style="font-size: 1.1rem; color: #666; max-width: 900px; margin: 0 auto;">World-class Scotch Yoke technology delivering exceptional torque performance. ATEX Zone 1 & 2 certified, SIL 2/3 safety-rated, and ISO 5211 compliant. Proven in 10,000+ installations across oil & gas, power generation, and chemical processing industries worldwide.</p>
+                <div class="hero-highlights" style="justify-content: center; margin-top: 1.5rem;">
+                    <span class="highlight-badge">
+                        <i class="fas fa-fire" style="color: #c41e3a; margin-right: 0.5rem;"></i>
+                        10,000+ Installations
+                    </span>
+                    <span class="highlight-badge">
+                        <i class="fas fa-award" style="color: #c41e3a; margin-right: 0.5rem;"></i>
+                        ATEX & SIL3 Certified
+                    </span>
+                    <span class="highlight-badge">
+                        <i class="fas fa-cog" style="color: #c41e3a; margin-right: 0.5rem;"></i>
+                        Torque: 10 Nm - 120,867 Nm
+                    </span>
+                </div>
             </div>
         </div>
     </section>
@@ -754,6 +782,24 @@
     <!-- Gearboxes -->
     <section id="gearboxes" class="product-section alt">
         <div class="container">
+            <div class="section-header" style="text-align: center; margin-bottom: 3rem;">
+                <h2 style="font-size: 2.5rem; color: #1a2942; margin-bottom: 1rem;">Mechanical Gearboxes</h2>
+                <p style="font-size: 1.1rem; color: #666; max-width: 900px; margin: 0 auto;">ISO 5211 compliant gearboxes engineered for precision multi-turn valve automation. Torque ratings up to 200,000 Nm with IP67 corrosion resistance. Trusted in power generation, water treatment, and industrial automation applications worldwide.</p>
+                <div class="hero-highlights" style="justify-content: center; margin-top: 1.5rem;">
+                    <span class="highlight-badge">
+                        <i class="fas fa-cog" style="color: #2196F3; margin-right: 0.5rem;"></i>
+                        ISO 5211 Mounting
+                    </span>
+                    <span class="highlight-badge">
+                        <i class="fas fa-shield-alt" style="color: #2196F3; margin-right: 0.5rem;"></i>
+                        IP67 Protection
+                    </span>
+                    <span class="highlight-badge">
+                        <i class="fas fa-gauge-high" style="color: #2196F3; margin-right: 0.5rem;"></i>
+                        Up to 200,000 Nm
+                    </span>
+                </div>
+            </div>
             <div class="product-detail reverse">
                 <div class="product-image">
                     <img src="https://images.unsplash.com/photo-1619642751034-765dfdf7c58e?w=800&q=80" alt="ITG Series Mechanical Worm Gear Actuator" class="product-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 50vw">
@@ -817,6 +863,24 @@
     <!-- Electro-Hydraulic Actuators -->
     <section id="electro-hydraulic" class="product-section">
         <div class="container">
+            <div class="section-header" style="text-align: center; margin-bottom: 3rem;">
+                <h2 style="font-size: 2.5rem; color: #1a2942; margin-bottom: 1rem;">Electro-Hydraulic Actuators</h2>
+                <p style="font-size: 1.1rem; color: #666; max-width: 900px; margin: 0 auto;">High-performance hydraulic actuation with advanced electronic control. Force ratings up to 5000 kN, pressure capacity 100-350 bar, response time <2 seconds. Ideal for large valve control in offshore, power generation, and heavy industry applications.</p>
+                <div class="hero-highlights" style="justify-content: center; margin-top: 1.5rem;">
+                    <span class="highlight-badge">
+                        <i class="fas fa-bolt" style="color: #FF9800; margin-right: 0.5rem;"></i>
+                        Force up to 5000 kN
+                    </span>
+                    <span class="highlight-badge">
+                        <i class="fas fa-tachometer-alt" style="color: #FF9800; margin-right: 0.5rem;"></i>
+                        Response <2 seconds
+                    </span>
+                    <span class="highlight-badge">
+                        <i class="fas fa-gauge-high" style="color: #FF9800; margin-right: 0.5rem;"></i>
+                        Pressure: 100-350 bar
+                    </span>
+                </div>
+            </div>
             <div class="product-detail">
                 <div class="product-image">
                     <img src="https://images.unsplash.com/photo-1581092160562-40aa08e78837?w=800&q=80" alt="Electro-Hydraulic Actuator" class="product-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 50vw">
@@ -879,6 +943,24 @@
     <!-- Electrical Actuators -->
     <section id="electrical" class="product-section alt">
         <div class="container">
+            <div class="section-header" style="text-align: center; margin-bottom: 3rem;">
+                <h2 style="font-size: 2.5rem; color: #1a2942; margin-bottom: 1rem;">Electrical Actuators</h2>
+                <p style="font-size: 1.1rem; color: #666; max-width: 900px; margin: 0 auto;">Smart, energy-efficient electric actuation with advanced digital control. 4-20mA/Modbus/HART protocols, 24-480V AC/DC operation, ±0.5% positioning accuracy. Ideal for process automation, water treatment, and Industry 4.0 applications requiring precise digital control.</p>
+                <div class="hero-highlights" style="justify-content: center; margin-top: 1.5rem;">
+                    <span class="highlight-badge">
+                        <i class="fas fa-microchip" style="color: #4CAF50; margin-right: 0.5rem;"></i>
+                        4-20mA • Modbus • HART
+                    </span>
+                    <span class="highlight-badge">
+                        <i class="fas fa-bullseye" style="color: #4CAF50; margin-right: 0.5rem;"></i>
+                        ±0.5% Accuracy
+                    </span>
+                    <span class="highlight-badge">
+                        <i class="fas fa-plug" style="color: #4CAF50; margin-right: 0.5rem;"></i>
+                        24-480V AC/DC
+                    </span>
+                </div>
+            </div>
             <div class="product-detail reverse">
                 <div class="product-image">
                     <img src="https://images.unsplash.com/photo-1581092334651-ddf26d9a09d0?w=800&q=80" alt="ITQ Series Electrical Rotary Actuator" class="product-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 50vw">
