--- a/products.html
+++ b/products.html
@@ -514,8 +514,13 @@
         <div class="container">
             <div class="product-detail reverse">
                 <div class="product-image">
-                    <img src="https://images.unsplash.com/photo-1565793298595-6a879b1d9492?w=800&q=80" alt="HD Heavy Duty Pneumatic Actuator" class="product-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 50vw">
-                    <img src="https://images.unsplash.com/photo-1581092160562-40aa08e78837?w=800&q=80" alt="HD Actuator Industrial Application" class="product-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 50vw">
+                    <picture>
+                        <source type="image/webp" srcset="assets/img/products/pneumatic/hd-actuator-320.webp 320w, assets/img/products/pneumatic/hd-actuator-640.webp 640w, assets/img/products/pneumatic/hd-actuator-1024.webp 1024w" sizes="(max-width:600px) 100vw, 50vw">
+                        <img src="assets/img/products/pneumatic/hd-actuator.jpg" srcset="assets/img/products/pneumatic/hd-actuator-320.jpg 320w, assets/img/products/pneumatic/hd-actuator-640.jpg 640w, assets/img/products/pneumatic/hd-actuator-1024.jpg 1024w" alt="HD Heavy Duty Pneumatic Actuator" class="product-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 50vw" fetchpriority="low">
+                    </picture>
+                    <picture>
+                        <img src="assets/img/products/pneumatic/hd-series.jpg" alt="HD Actuator Industrial Application" class="product-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 50vw">
+                    </picture>
                 </div>
                 <div class="product-content">
                     <h2>HD Actuator (Rotary) - Heavy-Duty Scotch Yoke</h2>
